--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --ignore-watch node_modules --transpile-only src/server.ts",
     "start": "node src/server.js",
     "build": "tsc",
-    "postinstall": "npm run build",
-    "dev": "ts-node-dev --ignore-watch node_modules --transpileOnly src/server.ts"
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
